--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Loginapp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Loginapp" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/my_primary</item>
         <item name="colorPrimaryVariant">@color/my_primary</item>
@@ -11,6 +11,7 @@
         <item name="colorOnSecondary">@color/my_secondary</item>
 
         <item name="android:statusBarColor">@color/my_primary</item>
+
 
 
     </style>
